tests/bad/12_bad_times_type_32.ris
void main():
    print "foo" * false;
    return;