tests/bad/12_bad_times_type_32.err
Type error in line 2, column 11:
operator '*' can be applied only on two ints or string and int
